--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,6 @@
   "rules":{
     "no-underscore-dangle" : ["error",{"allow":["_id"]}],
     "no-console" : "off"
-  }
+  },
+  "noInlineConfig": true
 }
